add excluding action for transitive dependencies, add removal for direct dependencies